<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.onkarpande.basketballcounter.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/teamA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teamA"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="30sp"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:id="@+id/teamApt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:layout_gravity="center"
                        android:textSize="50sp"
                        android:textColor="#000000"
                        />
                    <Button
                        android:id="@+id/Apt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pt3"
                        android:padding="4dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Apt3"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                    <Button
                        android:id="@+id/Apt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pt2"
                        android:padding="4dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Apt2"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                    <Button
                        android:id="@+id/Apt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/freeTh"
                        android:padding="4dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Apt1"
                        android:textSize="15sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/teamB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teamB"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:id="@+id/teamBpt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:layout_gravity="center"
                        android:textSize="50sp"
                        android:textColor="#000000"
                        />
                    <Button
                        android:id="@+id/Bpt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pt3"
                        android:padding="4dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Bpt3"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                    <Button
                        android:id="@+id/Bpt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pt2"
                        android:padding="4dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Bpt2"
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                    <Button
                        android:id="@+id/Bpt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/freeTh"
                        android:padding="4dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="8dp"
                        android:onClick="Bpt1"
                        android:textSize="15sp"
                        android:textColor="#ffffff"
                        android:background="#cc6600"
                        />
                </LinearLayout>


            </LinearLayout>
            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="0"
                android:padding="4dp"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:onClick="reset"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:background="#cc6600"/>

        </LinearLayout>
    </ScrollView>
